--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "build": "node_modules/.bin/tsc",
-    "dev": "nodemon --watch . --ext ts --exec 'npm run build && node ./build/index.js'"
+    "dev": "nodemon --watch . --ext ts --exec 'npm run build && node ./build/index.js'",
+    "start": "node ./build/index.js"
   },
   "author": "g-dag",
   "license": "ISC",
@@ -14,6 +15,7 @@
     "node-telegram-bot-api": "^0.61.0"
   },
   "devDependencies": {
+    "@flydotio/dockerfile": "^0.4.10",
     "@types/node": "^20.4.0",
     "@types/node-telegram-bot-api": "^0.61.6",
     "nodemon": "^2.0.22",
