--- a/fly.toml
+++ b/fly.toml
@@ -10,9 +10,9 @@ primary_region = "ams"
 start = "node /app/build/index.js"
 
 [http_service]
-  internal_port = 3000
-  force_https = true
-  auto_stop_machines = true
-  auto_start_machines = true
-  min_machines_running = 0
-  processes = ["app"]
+internal_port = 3000
+force_https = true
+auto_stop_machines = false
+auto_start_machines = false
+min_machines_running = 0
+processes = ["app"]
