--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "node-telegram-bot-api": "^0.61.0"
   },
   "devDependencies": {
+    "@biomejs/biome": "1.8.3",
     "@flydotio/dockerfile": "^0.4.10",
     "@types/node": "^20.4.0",
     "@types/node-telegram-bot-api": "^0.61.6",
